--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
